quick note boarder overflow bug fixed

--- a/src/pages/DashnoardPage/DashboardStyles.css
+++ b/src/pages/DashnoardPage/DashboardStyles.css
@@ -84,8 +84,9 @@
 .time-card {
   padding: 16px;
   background-color: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
+  border: 0 !important;
+  align-items: center;
   /* min-height: 235.19px; */
 }
 .curr-time {
@@ -181,7 +182,6 @@
     align-self: auto;
     order: 0;
     width: 100%;
-   
     border-radius: 15px;
     background: #ffffff;
     box-shadow: 5px 5px 10px #b2b2b2;
@@ -189,7 +189,8 @@
 
 .quick-note-card {
     width: 100%;
-    height: 100%;
+    min-height: 240px;
+    border: 0 !important;
 }
 
 
